[0.8.0-beta.1+build.11] Fixed version sorting in Deploy.pm, changed dumpfile location, enabling Dnd

--- a/t/unit/html/plugins/apps/parameterrow/test.html
+++ b/t/unit/html/plugins/apps/parameterrow/test.html
@@ -11,7 +11,7 @@
 	@import "../../../../../dojo/dijit/themes/tundra/tundra.css";
 </style>
 
-<title>t.unit.plugins.apps.parameterrow.test</title>
+<title id="pagetitle"></title>
 
 <script type="text/javascript">
 
@@ -48,7 +48,7 @@ var dojoConfig = {
 <body class="agua tundra claro">
 
 <center>
-	<h3>t.unit.plugins.apps.parameterrow.test</h3>
+	<h3 id="pageheader"></h3>
 </center>
 
 	<div
