--- a/t/unit/html/plugins/graph/test.html
+++ b/t/unit/html/plugins/graph/test.html
@@ -17,7 +17,7 @@
 	}
 </style>
 
-<title> t.plugins.graph.test</title>
+<title> t.plugins.graph.test </title>
 
 <script type="text/javascript">
 
@@ -44,11 +44,12 @@ var dojoConfig = {
 	debugAtAllCosts: true,
 	useCommentedJson: true
 };
+
 </script>
 
 
 <script type="text/javascript"
-	src="http://localhost/infusiondev/dojo/dojo/dojo.js">
+	src="../../../../dojo/dojo/dojo.js">
 </script>
 
 <script type="text/javascript" src="./runTests.js"></script>
