--- a/t/unit/html/plugins/runTests.html
+++ b/t/unit/html/plugins/runTests.html
@@ -3,7 +3,7 @@
   <head>
     <title>demo.doh Unit Test Runner</title>
     <meta http-equiv="REFRESH" 
-          content="0;url=../../dojo-1.8.3/util/doh/runner.html?testModule=t.plugins.module&registerModulePath=plugins,../../plugins;t,../../t">
+          content="0;url=../../dojo/util/doh/runner.html?testModule=t.plugins.module&registerModulePath=plugins,../../plugins;t,../../t">
   </head>
   <body>
       Redirecting to D.O.H runner.
