--- a/t/unit/html/plugins/sharing/access/test.html
+++ b/t/unit/html/plugins/sharing/access/test.html
@@ -5,13 +5,13 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 <style type="text/css">
-	@import "../../../../dojo/dojo/resources/dojo.css";
-	@import "../../../../dojo/dijit/themes/dijit.css";
-	@import "../../../../dojo/dijit/themes/soria/soria.css";
-	@import "../../../../dojo/dijit/themes/tundra/tundra.css";
+	@import "../../../../../dojo/dojo/resources/dojo.css";
+	@import "../../../../../dojo/dijit/themes/dijit.css";
+	@import "../../../../../dojo/dijit/themes/soria/soria.css";
+	@import "../../../../../dojo/dijit/themes/tundra/tundra.css";
 </style>
 
-<title> t.plugins.sharing.access.test</title>
+<title id="pagetitle"></title>
 
 <script type="text/javascript">
 
@@ -42,7 +42,7 @@ var dojoConfig = {
 </script>
 
 <script type="text/javascript"
-	src="../../../../dojo/dojo/dojo.js">
+	src="../../../../../dojo/dojo/dojo.js">
 </script>
 
 <script type="text/javascript" src="./runTests.js"></script>
@@ -51,7 +51,7 @@ var dojoConfig = {
 <body class="agua tundra claro">
 	
 <center>
-	<h3>t.unit.plugins.sharing.access.test</h3>
+	<h3 id="pageheader"></h3>
 </center>
 
 	<div 
