--- a/t/unit/html/plugins/sharing/groups/test.html
+++ b/t/unit/html/plugins/sharing/groups/test.html
@@ -5,10 +5,10 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 <style type="text/css">
-	@import "../../../../../../dojo/dojo/resources/dojo.css";
-	@import "../../../../../../dojo/dijit/themes/dijit.css";
-	@import "../../../../../../dojo/dijit/themes/soria/soria.css";
-	@import "../../../../../../dojo/dijit/themes/tundra/tundra.css";
+	@import "../../../../../dojo/dojo/resources/dojo.css";
+	@import "../../../../../dojo/dijit/themes/dijit.css";
+	@import "../../../../../dojo/dijit/themes/soria/soria.css";
+	@import "../../../../../dojo/dijit/themes/tundra/tundra.css";
 </style>
 
 <title id="pagetitle"></title>
@@ -42,7 +42,7 @@ var dojoConfig = {
 </script>
 
 <script type="text/javascript"
-	src="../../../../../../dojo/dojo/dojo.js">
+	src="../../../../../dojo/dojo/dojo.js">
 </script>
 
 <script type="text/javascript" src="./runTests.js"></script>
