[0.8.0-beta.1+build.12] Enabled automated installation of packages and dependencies

--- a/t/unit/html/plugins/login/load/test.html
+++ b/t/unit/html/plugins/login/load/test.html
@@ -5,18 +5,13 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
 <style type="text/css">
-
-	/* DOJO STYLES */
-	@import "../../../../dojo/dojo/resources/dojo.css";
-
-	/* THEMES */
-	@import "../../../../dojo/dijit/themes/dijit.css";
-	@import "../../../../dojo/dijit/themes/soria/soria.css";
-	@import "../../../../dojo/dijit/themes/tundra/tundra.css";
-
+	@import "../../../../../dojo/dojo/resources/dojo.css";
+	@import "../../../../../dojo/dijit/themes/dijit.css";
+	@import "../../../../../dojo/dijit/themes/soria/soria.css";
+	@import "../../../../../dojo/dijit/themes/tundra/tundra.css";
 </style>
 
-<title> t.unit.plugins.login.load</title>
+<title id="pagetitle"></title>
 
 <script type="text/javascript">
 
@@ -46,7 +41,7 @@ var dojoConfig = {
 </script>
 
 <script type="text/javascript"
-	src="../../../../dojo/dojo/dojo.js">
+	src="../../../../../dojo/dojo/dojo.js">
 </script>
 	
 <script type="text/javascript" src="./runTests.js"></script>
@@ -55,11 +50,10 @@ var dojoConfig = {
 <body class="agua tundra claro">
 
 <center>
-	<h3> t.unit.plugins.login.load</h3>
+	<h3 id="pageheader"></h3>
 </center>
-
+	
 	<div id="loginHolder"></div>
-	<div id="attachPoint"></div>
-
+	<div id="attachPoint" ></div>
 </body>
 </html>
